MDEV-4480 Assertion `inited == NONE' fails on closing a connection with open handler on temporary table