sql/sql_class.cc
@@ -1390,6 +1390,8 @@ void THD::cleanup(void)
   }
 #endif
 
+  mysql_ha_cleanup(this);
+
   close_temporary_tables(this);
 
   transaction.xid_state.xa_state= XA_NOTR;
@@ -1397,7 +1399,6 @@ void THD::cleanup(void)
   xid_cache_delete(&transaction.xid_state);
 
   locked_tables_list.unlock_locked_tables(this);
-  mysql_ha_cleanup(this);
 
   DBUG_ASSERT(open_tables == NULL);
   /*
